--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,20 +1,66 @@
-/*.box{
-    display: inline-block;
-}
-  */
 
-header{
-    background-color: rgb(202, 103, 32);
-    height: 80px;
+.colorbody{
+    background-color: rgb(223, 173, 141);
+}
+
+.banner{
+    width: 673px;
+    height: 100px;
+    background-color: orange;
+    position: relative;
+}
+
+.burger-top{
+      position: absolute;
+      width: 100px;
+      height: 100px;
+      left: 600px;
+      
+      
+}
+
+.colorcont-1{
+
+width: 660px;
+background-color: rgb(255, 255, 255);
+
+}
+
+h1{
+    margin-top: 100px;
     text-align: center;
-   
+    position: relative;
 }
 
-.color{
-    background-color: rgb(214, 166, 186);
-    border: white solid ;
+
+.Add-Margin{
+    margin-left: 40px;
+    margin-top: 40px;
 }
 
-footer{
-    background-color: violet;
+#nome-hamburger{
+background-color: rgb(235, 189, 104);
+border: orange solid;
+}
+
+
+div#container {
+    width: 90%;
+    border: 1px solid #000;
+    text-align: center;
+}
+div.split2 div {
+    float: left;
+    width: 50%;
+}
+div.wide {
+    clear: left;
+}
+
+.text-color{
+    color: red;
+}
+.ft-sfondo{
+    background-color: rgb(190, 32, 72);
+    height: 80px;
 }
